# package-url

./: README.md  README_EN.md
.github/workflows/: main.yml  tauri-action.yml  tauri-compilation.yml
src/: splash.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/config/: conf.json  config.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs  parse.rs  setupLinks.js
