[package]
name = "package-url"
version = "0.0.1"
description = "package url"
authors = ["PierXuY"]
edition = "2021"

[workspace]
members = ["../src-tauri/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "http-all", "shell-open"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dunce = "1.0.4"
tauri-utils = "1.5.4"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
