[package]
name = "package-url"
version = "0.0.1"
description = "package url"
authors = ["PierXuY"]
edition = "2021"

[workspace]
members = ["../src-tauri/"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = [ "dialog-all", "http-all", "shell-open", "macos-private-api"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dunce = "1.0.4"
tauri-utils = "1.5.4"
tokio = { version = "1.40.0", features = ["full"] }
command-group = {version = "5.0.1", features = ["with-tokio"] }
winapi = "0.3.9"

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
